# Socketeria

./: .travis.yml  CMakeLists.txt  README.md  main.cpp  socketeriaConfig.h.in
docs/: CMakeLists.txt  Doxyfile.in
example/: CMakeLists.txt  main.cpp
example/TCP/: CMakeLists.txt  main.cpp
example/UDP/: CMakeLists.txt  main.cpp
src/: defines.hpp  enums.hpp  interface.hpp  socket.cpp  socket.hpp  sockettcp.cpp  sockettcp.hpp  socketudp.cpp  socketudp.hpp  types.hpp
xsocket/: CMakeLists.txt  defines.hpp  enums.hpp  interface.hpp  socket.cpp  socket.hpp  sockettcp.cpp  socketudp.cpp  socketudp.hpp  types.hpp
xsocket/xplatform/: CMakeLists.txt  platform.cpp  platform.hpp
